20 - Implemented Pagination, Query Params, HAL & Implemented Integration Tests for New Methods with JSON, XML and YAML